add working operate buttons funcs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="calc">
             <div class="calcDisplay">
-               <p class="display"></p>
+               <p class="display">0</p>
             </div>
             <div class="calcNumbers">
                 <button class="numBut">0</button>
@@ -29,12 +29,12 @@
             </div>
         
         <div class="calcOperators">
-            <button class="opBut">+</button>
-            <button class="opBut">-</button>
-            <button class="opBut">*</button>
-            <button class="opBut">/</button>
-            <button class="opBut">CLEAR</button>
-            <button class="opBut">=</button>
+            <button class="opBut plusBut">+</button>
+            <button class="opBut minusBut">-</button>
+            <button class="opBut multiBut">*</button>
+            <button class="opBut divideBut">/</button>
+            <button class="opBut clearBut">CLEAR</button>
+            <button class="opBut equalBut">=</button>
 
         </div>
     </div>
