add working clear and equal buttons

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <button class="opBut minusBut">-</button>
             <button class="opBut multiBut">*</button>
             <button class="opBut divideBut">/</button>
-            <button class="opBut clearBut">CLEAR</button>
-            <button class="opBut equalBut">=</button>
+            <button class="clearBut">CLEAR</button>
+            <button class="equalBut">=</button>
 
         </div>
     </div>
