--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <div class="container">
+        <div class="header">
+            <h1>siem</h1>
+        </div>
         <div class="calc">
             <div class="calcDisplay">
                <p class="display">0</p>
             </div>
             <div class="calcNumbers">
-                <button class="numBut">0</button>
-                <button class="numBut">1</button>
-                <button class="numBut">2</button>
-                <button class="numBut">3</button>
-                <button class="numBut">4</button>
-                <button class="numBut">5</button>
-                <button class="numBut">6</button>
-                <button class="numBut">7</button>
-                <button class="numBut">8</button>
                 <button class="numBut">9</button>
+                <button class="numBut">8</button>
+                <button class="numBut">7</button>
+                <button class="numBut">6</button>
+                <button class="numBut">5</button>
+                <button class="numBut">4</button>
+                <button class="numBut">3</button>
+                <button class="numBut">2</button>
+                <button class="numBut">1</button>
+                <button class="numBut">0</button>
                 <button class="numBut">.</button>
 
             </div>
